compsoft/Compsoft_Gradio_RAG_app.py

--- a/app.ipynb
+++ b/app.ipynb
@@ -294,10 +294,6 @@
     "    def construct_chain(cls, config: ChatBotConfig):\n",
     "        vector_store = cls.get_vector_store(config.embedding_type)\n",
     "        retriever = vector_store.as_retriever()\n",
-    "        #print(f\"Itt még jó: {config.model}\") # by EE\n",
-    "        #print(config.get_condensation_model())\n",
-    "        #print(RunnablePassthrough.assign(chat_history=lambda x: get_buffer_string(x[\"chat_history\"])))\n",
-    "        #print(\"\\n\\n\")\n",
     "        #####################################x\n",
     "        # INPUTS:                            #\n",
     "        #   chat_history: ChatMessageHistory #\n",
@@ -329,8 +325,7 @@
     "        #########################################\n",
     "        question_context = {\n",
     "            \"context\": (\n",
-    "                #lambda x: x[\"standalone_question\"] # itemgetter(\"standalone_question\")\n",
-    "                itemgetter(\"standalone_question\")\n",
+    "                lambda x: x[\"standalone_question\"] # itemgetter(\"standalone_question\")\n",
     "                | retriever\n",
     "                | cls.combine_documents\n",
     "            ),\n",
