modified:   Compsoft_Gradio_RAG_app.ipynb modified:   Compsoft_Gradio_RAG_app.py

--- a/compsoft/Compsoft_Gradio_RAG_app.ipynb
+++ b/compsoft/Compsoft_Gradio_RAG_app.ipynb
@@ -7,9 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
     "from app import ChatBot, ChatBotConfig\n",
-    "from typing import get_args"
+    "from typing import get_args\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv() "
    ]
   },
   {
@@ -19,7 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv() "
+    "import os\n",
+    "Gradio_user = os.environ[\"GRADIO_USER\"]\n",
+    "Gradio_password = os.environ[\"GRADIO_PASSWORD\"]"
    ]
   },
   {
@@ -140,8 +144,8 @@
     "    )\n",
     "\n",
     "#demo.launch()\n",
-    "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"Ericsson\", \"Torshamnsgatan21\"), max_threads=20, show_error=True, state_session_capacity=20)\n",
-    "demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(\"CompSoft\", \"Bikszadi16\"), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)\n"
+    "demo.launch(share=True)\n",
+    "#demo.launch(share=True, share_server_address=\"gradio.componentsoft.ai:7000\", share_server_protocol=\"https\", auth=(Gradio_user, Gradio_password), max_threads=20, show_error=True, favicon_path=\"data/favicon.ico\", state_session_capacity=20)\n"
    ]
   },
   {
