new file:   src/Compsoft_Gradio_RAG_app.py: sym.link to src/app.py
modified:   src/app.ipynb: Default LLM family and model changed to gpt-4o

modified:   src/app.py: Default LLM family and model changed to gpt-4o

modified:   src/chatbot.py: LLM families reordered to have closed-source then
open-source ones, Changed the name of LLM families to contain their
vendor's name as well

--- a/src/app.ipynb
+++ b/src/app.ipynb
@@ -220,13 +220,13 @@
     "        model_family = gr.Dropdown(\n",
     "            choices=list(model_by_families.keys()),\n",
     "            label=\"Model family\",\n",
-    "            value=\"Mistral\",\n",
+    "            value=\"OpenAI GPT\",\n",
     "        )\n",
     "\n",
     "        model_name = gr.Dropdown(\n",
     "            list(model_by_families[model_family.value]),\n",
     "            label=\"Model\",\n",
-    "            value=\"mistral-large\",\n",
+    "            value=\"gpt-4o\",\n",
     "        )\n",
     "\n",
     "    with gr.Row():\n",
